--- a/Documentation/reports/markers.html
+++ b/Documentation/reports/markers.html
@@ -36,7 +36,7 @@
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <i class="icon-ellipsis-vertical"></i>
             </a>
-            <a class="brand" href="../index.html">GPhpThread - a heavy threads implementation in pure PHP</a>
+            <a class="brand" href="../index.html">GPhpThread - a heavy threads implementation in pure PHP - Documentation</a>
 
             <div class="nav-collapse">
                 <ul class="nav pull-right">
@@ -141,7 +141,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on December 8th, 2015 at 21:15.
+                    on December 8th, 2015 at 21:21.
                 </section>
             </section>
         </section>
