--- a/Documentation/classes/GPhpThread.html
+++ b/Documentation/classes/GPhpThread.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-690993130"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1269669833"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-690993130" class="accordion-body collapse in">
+            <div id="namespace-1269669833" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -292,7 +292,7 @@
                                                     <tr>
                                 <td><a href="../classes/GPhpThreadCriticalSection.html">\GPhpThreadCriticalSection</a>|null</td>
                                 <td>$criticalSection </td>
-                                <td><p>Instance of the critical section that is going to be associated with the created thread. Variable with null value is also valid.</p></td>
+                                <td><p>Instance of the critical section that is going to be associated with the created thread. Variable with null value is also valid. REFERENCE type.</p></td>
                             </tr>
                                             </table>
                 
@@ -971,7 +971,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on December 8th, 2015 at 21:21.
+                    on January 4th, 2016 at 13:03.
                 </section>
             </section>
         </section>
