--- a/Documentation/classes/GPhpThreadIntercom.html
+++ b/Documentation/classes/GPhpThreadIntercom.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1525397564"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1719626616"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1525397564" class="accordion-body collapse in">
+            <div id="namespace-1719626616" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -148,6 +148,8 @@
                                                     <li class="class"><a href="../classes/GPhpThreadCriticalSection.html">GPhpThreadCriticalSection</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadException.html">GPhpThreadException</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></li>
                                             </ul>
                 </div>
             </div>
@@ -571,7 +573,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on January 4th, 2016 at 13:03.
+                    on June 29th, 2016 at 02:23.
                 </section>
             </section>
         </section>
