--- a/Documentation/files/GPhpThread.html
+++ b/Documentation/files/GPhpThread.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-245240433"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1025622070"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-245240433" class="accordion-body collapse in">
+            <div id="namespace-1025622070" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -148,6 +148,8 @@
                                                     <li class="class"><a href="../classes/GPhpThreadCriticalSection.html">GPhpThreadCriticalSection</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadException.html">GPhpThreadException</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></li>
                                             </ul>
                 </div>
             </div>
@@ -198,6 +200,15 @@ SOFTWARE.</p>
                                             <tr>
                             <td><a href="../classes/GPhpThreadCriticalSection.html">GPhpThreadCriticalSection</a></td>
                             <td><em>Critical section for sharing data between multiple processes.</em></td>
+                        </tr>
+                                            <tr>
+                            <td><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></td>
+                            <td><em>A data container not allowed to be cloned. Once created, only REFERENCEs to it are allowed.</em></td>
+                        </tr>
+                                            <tr>
+                            <td><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></td>
+                            <td><em>A wrapper providing RAII mechanism for locking and unlocking
+purposes of a critical section objects and a similar ones.</em></td>
                         </tr>
                                             <tr>
                             <td><a href="../classes/GPhpThread.html">GPhpThread</a></td>
@@ -272,7 +283,7 @@ SOFTWARE.</p>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on January 4th, 2016 at 13:03.
+                    on June 29th, 2016 at 02:23.
                 </section>
             </section>
         </section>
