--- a/Documentation/namespaces/default.html
+++ b/Documentation/namespaces/default.html
@@ -88,10 +88,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-569261264"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-485550515"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-569261264" class="accordion-body collapse in">
+            <div id="namespace-485550515" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -100,6 +100,8 @@
                                                     <li class="class"><a href="../classes/GPhpThreadCriticalSection.html">GPhpThreadCriticalSection</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadException.html">GPhpThreadException</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></li>
                                             </ul>
                 </div>
             </div>
@@ -137,6 +139,15 @@
                                             <tr>
                             <td><a href="../classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></td>
                             <td><em>Process intercommunication class.</em></td>
+                        </tr>
+                                            <tr>
+                            <td><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></td>
+                            <td><em>A wrapper providing RAII mechanism for locking and unlocking
+purposes of a critical section objects and a similar ones.</em></td>
+                        </tr>
+                                            <tr>
+                            <td><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></td>
+                            <td><em>A data container not allowed to be cloned. Once created, only REFERENCEs to it are allowed.</em></td>
                         </tr>
                                         </table>
                                     </div>
@@ -192,7 +203,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on January 4th, 2016 at 13:03.
+                    on June 29th, 2016 at 02:23.
                 </section>
             </section>
         </section>
