--- a/Documentation/reports/markers.html
+++ b/Documentation/reports/markers.html
@@ -64,7 +64,7 @@
                             </li>
                             <li>
                                 <a href="../reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
+                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">1</span>
                                 </a>
                             </li>
                             <li>
@@ -88,7 +88,8 @@
         <div class="span2 sidebar">
             <ul class="side-nav nav nav-list">
                 <li class="nav-header">Navigation</li>
-                                                                                                    </ul>
+                                                                        <li><a href="#GPhpThread.php"><i class="icon-file"></i> GPhpThread.php</a></li>
+                                                                    </ul>
         </div>
 
         <div class="span10 offset2">
@@ -98,10 +99,31 @@
                 <li>Markers</li>
             </ul>
 
-                            <div class="alert alert-info">No markers have been found in this project.</div>
             
             <div id="marker-accordion">
-                                                                </div>
+                                                            <div class="package-contents">
+                            <a name="GPhpThread.php" id="GPhpThread.php"></a>
+                            <h3>
+                            <i class="icon-file"></i>
+                                GPhpThread.php
+                                <small style="float: right;padding-right: 10px;">1</small>
+                            </h3>
+                            <div>
+                                <table class="table markers table-bordered">
+                                    <tr>
+                                        <th>Type</th>
+                                        <th>Line</th>
+                                        <th>Description</th>
+                                    </tr>
+                                                                            <tr>
+                                            <td>TODO</td>
+                                            <td>1448</td>
+                                            <td></td>
+                                        </tr>
+                                                                    </table>
+                            </div>
+                        </div>
+                                                </div>
         </div>
     </section>
 
@@ -141,7 +163,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 6th, 2016 at 21:36.
+                    on July 6th, 2016 at 23:47.
                 </section>
             </section>
         </section>
