Improved in gphpthread determination

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -63,7 +63,7 @@
                             </li>
                             <li>
                                 <a href="reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">1</span>
+                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
                                 </a>
                             </li>
                             <li>
@@ -88,10 +88,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-2098843924"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1441235328"></a>
                                 <a href="namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-2098843924" class="accordion-body collapse in">
+            <div id="namespace-1441235328" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -101,7 +101,7 @@
                                                     <li class="class"><a href="classes/GPhpThreadException.html">GPhpThreadException</a></li>
                                                     <li class="class"><a href="classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></li>
                                                     <li class="class"><a href="classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></li>
-                                                    <li class="class"><a href="classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></li>
+                                                    <li class="class"><a href="classes/GPhpThreadNotCloneableContainer.html">GPhpThreadNotCloneableContainer</a></li>
                                             </ul>
                 </div>
             </div>
@@ -146,8 +146,8 @@
 purposes of a critical section objects and a similar ones.</em></td>
                         </tr>
                                             <tr>
-                            <td><a href="classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></td>
-                            <td><em>A data container not allowed to be cloned. Once created, only REFERENCEs to it are allowed.</em></td>
+                            <td><a href="classes/GPhpThreadNotCloneableContainer.html">GPhpThreadNotCloneableContainer</a></td>
+                            <td><em>A data container not allowed to be cloned.</em></td>
                         </tr>
                                         </table>
                                     </div>
@@ -203,7 +203,7 @@ purposes of a critical section objects and a similar ones.</em></td>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 6th, 2016 at 23:47.
+                    on July 8th, 2016 at 00:19.
                 </section>
             </section>
         </section>
