--- a/Documentation/files/GPhpThread.html
+++ b/Documentation/files/GPhpThread.html
@@ -111,7 +111,7 @@
                             </li>
                             <li>
                                 <a href="../reports/markers.html">
-                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">1</span>
+                                                                                                                                                                                        <i class="icon-list-alt"></i>&#160;Markers <span class="label label-info pull-right">0</span>
                                 </a>
                             </li>
                             <li>
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1942985749"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-229614313"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1942985749" class="accordion-body collapse in">
+            <div id="namespace-229614313" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -149,7 +149,7 @@
                                                     <li class="class"><a href="../classes/GPhpThreadException.html">GPhpThreadException</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadIntercom.html">GPhpThreadIntercom</a></li>
                                                     <li class="class"><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></li>
-                                                    <li class="class"><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></li>
+                                                    <li class="class"><a href="../classes/GPhpThreadNotCloneableContainer.html">GPhpThreadNotCloneableContainer</a></li>
                                             </ul>
                 </div>
             </div>
@@ -202,8 +202,8 @@ SOFTWARE.</p>
                             <td><em>Critical section for sharing data between multiple processes.</em></td>
                         </tr>
                                             <tr>
-                            <td><a href="../classes/GPhpThreadUncloneableContainer.html">GPhpThreadUncloneableContainer</a></td>
-                            <td><em>A data container not allowed to be cloned. Once created, only REFERENCEs to it are allowed.</em></td>
+                            <td><a href="../classes/GPhpThreadNotCloneableContainer.html">GPhpThreadNotCloneableContainer</a></td>
+                            <td><em>A data container not allowed to be cloned.</em></td>
                         </tr>
                                             <tr>
                             <td><a href="../classes/GPhpThreadLockGuard.html">GPhpThreadLockGuard</a></td>
@@ -283,7 +283,7 @@ purposes of a critical section objects and a similar ones.</em></td>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on July 6th, 2016 at 23:47.
+                    on July 8th, 2016 at 00:19.
                 </section>
             </section>
         </section>
