Various bug and typo fixes

--- a/Documentation/classes/GPhpThread.html
+++ b/Documentation/classes/GPhpThread.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-498221406"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1470544782"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-498221406" class="accordion-body collapse in">
+            <div id="namespace-1470544782" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -220,7 +220,7 @@ are required.</p>
                                                                     <a href="../classes/GPhpThread.html#method_isParentAlive" class="">isParentAlive()</a><br />
                                                                     <a href="../classes/GPhpThread.html#method_sleep" class="">sleep()</a><br />
                                                                     <a href="../classes/GPhpThread.html#method_makeNicer" class="">makeNicer()</a><br />
-                                                                    <a href="../classes/GPhpThread.html#method_makeUnfrendlier" class="">makeUnfrendlier()</a><br />
+                                                                    <a href="../classes/GPhpThread.html#method_makeUnfriendlier" class="">makeUnfriendlier()</a><br />
                                                             </section>
                             <section class="span4">
                                                                     <em>No protected properties found</em>
@@ -966,11 +966,11 @@ updated after any calls to start()/stop().</p>
 
                                     <div class="row-fluid">
         <div class="span8 content class">
-            <a id="method_makeUnfrendlier" name="method_makeUnfrendlier" class="anchor"></a>
+            <a id="method_makeUnfriendlier" name="method_makeUnfriendlier" class="anchor"></a>
             <article class="method">
-                <h3 class="protected ">makeUnfrendlier()</h3>
+                <h3 class="protected ">makeUnfriendlier()</h3>
                 <a href="#source-view" role="button" class="pull-right btn" data-toggle="modal" style="font-size: 1.1em; padding: 9px 14px"><i class="icon-code"></i></a>
-                <pre class="signature" style="margin-right: 54px;">makeUnfrendlier() : boolean</pre>
+                <pre class="signature" style="margin-right: 54px;">makeUnfriendlier() : boolean</pre>
                 <p><em>At process level increases the niceness of a heavy &quot;thread&quot; making its priority lower. Multiple calls of the method will accumulate and increase the effect.</em></p>
                 
 
@@ -1097,7 +1097,7 @@ updated after any calls to start()/stop().</p>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on August 29th, 2016 at 19:47.
+                    on September 15th, 2016 at 20:25.
                 </section>
             </section>
         </section>
