--- a/Documentation/classes/GPhpThreadLockGuard.html
+++ b/Documentation/classes/GPhpThreadLockGuard.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-200851199"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1238998224"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-200851199" class="accordion-body collapse in">
+            <div id="namespace-1238998224" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -214,7 +214,7 @@ purposes of a critical section objects and a similar ones.</em></p>
                                                                     <em>No private methods found</em>
                                                             </section>
                             <section class="span4">
-                                                                    <a href="../classes/GPhpThreadLockGuard.html#property_criticalSectionObject" class="">$criticalSectionObject</a><br />
+                                                                    <a href="../classes/GPhpThreadLockGuard.html#property_criticalSectionObj" class="">$criticalSectionObj</a><br />
                                                                     <a href="../classes/GPhpThreadLockGuard.html#property_unlockMethod" class="">$unlockMethod</a><br />
                                                                     <a href="../classes/GPhpThreadLockGuard.html#property_unlockMethodsParams" class="">$unlockMethodsParams</a><br />
                                                             </section>
@@ -279,10 +279,10 @@ purposes of a critical section objects and a similar ones.</em></p>
 
                                                                     <div class="row-fluid">
         <div class="span8 content class">
-            <a id="property_criticalSectionObject" name="property_criticalSectionObject" class="anchor"></a>
+            <a id="property_criticalSectionObj" name="property_criticalSectionObj" class="anchor"></a>
             <article class="property">
-                <h3 class="private ">$criticalSectionObject</h3>
-                <pre class="signature">$criticalSectionObject : object</pre>
+                <h3 class="private ">$criticalSectionObj</h3>
+                <pre class="signature">$criticalSectionObj : object</pre>
                 <p><em></em></p>
                 
 
@@ -492,7 +492,7 @@ purposes of a critical section objects and a similar ones.</em></p>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on August 29th, 2016 at 19:47.
+                    on September 15th, 2016 at 20:25.
                 </section>
             </section>
         </section>
