Minor improvements over the noncloneable containers

--- a/Documentation/classes/GPhpThreadNotCloneableContainer.html
+++ b/Documentation/classes/GPhpThreadNotCloneableContainer.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1144454478"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-444913094"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1144454478" class="accordion-body collapse in">
+            <div id="namespace-444913094" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -345,7 +345,8 @@ It is NOT protected against fork or direct import()/export(). If that is desired
         </div>
         <aside class="span4 detailsbar">
             <h1><i class="icon-arrow-down"></i></h1>
-                                                            <dl>
+                                                    <span class="label label-info">final</span>
+                                    <dl>
                                                                             </dl>
             <h2>Tags</h2>
             <table class="table table-condensed">
@@ -471,7 +472,7 @@ It is NOT protected against fork or direct import()/export(). If that is desired
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 5th, 2016 at 23:30.
+                    on October 18th, 2016 at 01:27.
                 </section>
             </section>
         </section>
