--- a/Documentation/classes/GPhpThread.html
+++ b/Documentation/classes/GPhpThread.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1533871750"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1078279375"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1533871750" class="accordion-body collapse in">
+            <div id="namespace-1078279375" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -998,7 +998,9 @@ updated after any calls to start()/stop().</p>
         <aside class="span4 detailsbar">
             <h1><i class="icon-arrow-down"></i></h1>
                                                             <dl>
-                                                                            </dl>
+                                                                                            <dt>See also</dt>
+                                                                <dd><a href="../classes/GPhpThread.html#method_makeUnfriendlier"><span class="namespace-wrapper">A method with the opposite effect is GPhpThread::makeUnfriendlier().</span></a></dd>
+                                                                </dl>
             <h2>Tags</h2>
             <table class="table table-condensed">
                                     <tr><td colspan="2"><em>None found</em></td></tr>
@@ -1027,7 +1029,9 @@ updated after any calls to start()/stop().</p>
         <aside class="span4 detailsbar">
             <h1><i class="icon-arrow-down"></i></h1>
                                                             <dl>
-                                                                            </dl>
+                                                                                            <dt>See also</dt>
+                                                                <dd><a href="../classes/GPhpThread.html#method_makeNicer"><span class="namespace-wrapper">A method with the opposite effect is GPhpThread::makeNicer().</span></a></dd>
+                                                                </dl>
             <h2>Tags</h2>
             <table class="table table-condensed">
                                     <tr><td colspan="2"><em>None found</em></td></tr>
@@ -1139,7 +1143,7 @@ updated after any calls to start()/stop().</p>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 20th, 2016 at 23:24.
+                    on October 20th, 2016 at 23:27.
                 </section>
             </section>
         </section>
