--- a/Documentation/classes/GPhpThread.html
+++ b/Documentation/classes/GPhpThread.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1078279375"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1553282130"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1078279375" class="accordion-body collapse in">
+            <div id="namespace-1553282130" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -1143,7 +1143,7 @@ updated after any calls to start()/stop().</p>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 20th, 2016 at 23:27.
+                    on February 3rd, 2017 at 00:44.
                 </section>
             </section>
         </section>
