--- a/Documentation/reports/deprecated.html
+++ b/Documentation/reports/deprecated.html
@@ -142,7 +142,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 20th, 2016 at 23:27.
+                    on February 3rd, 2017 at 00:44.
                 </section>
             </section>
         </section>
