--- a/Documentation/classes/GPhpThreadException.html
+++ b/Documentation/classes/GPhpThreadException.html
@@ -136,10 +136,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-664288371"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1409214621"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-664288371" class="accordion-body collapse in">
+            <div id="namespace-1409214621" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -277,17 +277,17 @@
                                                     <tr>
                                 <td>string</td>
                                 <td>$msg </td>
-                                <td><p>Exception message</p></td>
+                                <td><p>Exception message.</p></td>
                             </tr>
                                                     <tr>
                                 <td>integer</td>
                                 <td>$code </td>
-                                <td><p>Exception code number</p></td>
+                                <td><p>Exception code number.</p></td>
                             </tr>
                                                     <tr>
                                 <td>\Exception</td>
                                 <td>$previous </td>
-                                <td></td>
+                                <td><p>The previous exception used for the exception chaining.</p></td>
                             </tr>
                                             </table>
                 
@@ -355,7 +355,7 @@
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 20th, 2016 at 23:27.
+                    on February 3rd, 2017 at 00:44.
                 </section>
             </section>
         </section>
