--- a/Documentation/namespaces/default.html
+++ b/Documentation/namespaces/default.html
@@ -88,10 +88,10 @@
                                 <div class="accordion" style="margin-bottom: 0">
         <div class="accordion-group">
             <div class="accordion-heading">
-                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1135309437"></a>
+                                    <a class="accordion-toggle " data-toggle="collapse" data-target="#namespace-1867181098"></a>
                                 <a href="../namespaces/default.html" style="margin-left: 30px; padding-left: 0">\</a>
             </div>
-            <div id="namespace-1135309437" class="accordion-body collapse in">
+            <div id="namespace-1867181098" class="accordion-body collapse in">
                 <div class="accordion-inner">
 
                     
@@ -203,7 +203,7 @@ purposes of a critical section objects and a similar ones.</em></td>
                 <section class="span10 offset1">
                     <hr />
                     Documentation is powered by <a href="http://www.phpdoc.org/">phpDocumentor </a> and authored
-                    on October 20th, 2016 at 23:27.
+                    on February 3rd, 2017 at 00:44.
                 </section>
             </section>
         </section>
